--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-router-dom": "^5.2.0",
     "recharts": "^1.8.5",
     "resolve": "1.6.0",
+    "semantic-ui-react": "^0.88.2",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "universal-cookie": "^4.0.3",
